exports[`<Header /> renders correctly with collapsed option 1`] = `
<header
  className="sc-dxgOiQ jrHiKF">
  <a
    className="sc-EHOje idpIUE"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb jYevDf">
    <button
      className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH cOlCUL"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with default options 1`] = `
<header
  className="sc-dxgOiQ jrHiKF">
  <a
    className="sc-EHOje idpIUE"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb jYevDf">
    <button
      className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH cOlCUL"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with fixed and collapsed options 1`] = `
<header
  className="sc-dxgOiQ dpGHpC">
  <a
    className="sc-EHOje idpIUE"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb jYevDf">
    <button
      className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH cOlCUL"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with fixed option 1`] = `
<header
  className="sc-dxgOiQ dpGHpC">
  <a
    className="sc-EHOje idpIUE"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb jYevDf">
    <button
      className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH cOlCUL"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with given large logo 1`] = `
<header
  className="sc-dxgOiQ jrHiKF">
  <a
    className="sc-EHOje idpIUE"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        Large
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb jYevDf">
    <button
      className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH cOlCUL"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with given small logo 1`] = `
<header
  className="sc-dxgOiQ jrHiKF">
  <a
    className="sc-EHOje idpIUE"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        Small
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb jYevDf">
    <button
      className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH cOlCUL"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with theme 1`] = `
<header
  className="sc-dxgOiQ jrHiKF">
  <a
    className="sc-EHOje cZVIGq"
    href="/"
    name="navbar-logo">
    <span
      className="sc-bZQynM iESfHl"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-gzVnrw fLAIUx"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb beTifj">
    <button
      className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jxNjZi"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH cOlCUL"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;
